# mad_pod_racing

./: .gitignore  LICENSE  README.md  hatch_build.py  pyproject.toml
.github/: ISSUE_TEMPLATE.md
.github/workflows/: build.yml  code-embedder.yaml
dev/readme_snippets/raw/: code_embedding_demo.py
src/mad_pod_racing/: __about__.py  __init__.py  catmull_rom_nd.py  catmull_rom_scipy.py  pod_race_gold.py  pod_race_silver.py
tests/: __init__.py
